Fix JFR chart alignment and expose SWIM GC logs